examples/test/testpolicy14367.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14367
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key0: value39
      key13: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value28
          key3: value46
          key6: value32
      podSelector:
        matchLabels:
          key8: value14
          key30: value29
          key0: value42
